# amplify-watch

./: Cargo.toml  README.md
.github/workflows/: check.yml  scheduled.yml  test.yml
examples/: basic.rs
src/: lib.rs  main.rs
