[package]
name = "amplify-watch"
version = "0.1.0"
license = "Apache-2.0 or MIT"
edition = "2021"
authors = ["Francisco Noel"]
description = "A Rust monitoring tool for AWS Amplify"
readme = "README.md"
homepage = "https://github.com/byfnoel/amplify-watch"
repository = "https://github.com/byfnoel/amplify-watch"
keywords = ["aws", "cli", "amplify", "monitoring", "rust"]

[dependencies]
aws-config = "1.1.0"
aws-sdk-amplify = "1.0.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
dotenv = "0.15.0"
